--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 body {
     margin: 0;
@@ -8,7 +8,7 @@ body {
     left: 0;
     right: 0;
     background-color:#fff159;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
   a {
     text-decoration: none;
@@ -80,7 +80,7 @@ nav .profile-link a {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
     height: 100%;
-    background-image: url("/assets/backgroundpage.png");  
+    background-image: url("/assets/backgroundpage.png");
     background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
