--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ nav .profile-link a {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
     height: 100%;
-    background-image: url("/assets/backgroundpage.png");
+    background-image: url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimg07.deviantart.net%2Fc93f%2Fi%2F2016%2F019%2F5%2F6%2Feat__sleep__code__repeat__alternative_version__by_johnslegers-d9ojp49.png&f=1&nofb=1");
     background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
