--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ nav .nav-logo-container {
     height: 30px;
 }
 nav .milogo{
-    margin-top: 10px;
+    margin-top: -20px;
     width: 200px;
     height: 60px;
 }
@@ -94,7 +94,7 @@ nav .profile-link a {
     margin-top: 80px;
 }
 .home-main-text {
-    font-size: 30px;
+    font-size: 1.875rem;
     font-weight: 700;
     letter-spacing: 10px;
     text-align: center;
@@ -108,13 +108,24 @@ nav .profile-link a {
     color: white;
 }
 .home-main-button {
-    width: 110px;
+    width: 105px;
     height: 50px;
-    background: #fff159 ;
+    background: #f5e641 ;
     display: grid;
     align-items: center;
     border-radius: 10px;
+    font-family: inherit;
+    font-weight: 900;
+    font-size: 16px;
+    border: 3px solid black;
+    border-radius: 0.4em;
+    box-shadow: 0.1em 0.1em;
 }
+.home-main-button:hover{
+ transform: translate(-0.05em, -0.05em);
+ box-shadow: 0.15em 0.15em;
+}
+
 .home-main-button a {
     font-weight: 700;
     font-size: 1rem;
@@ -155,10 +166,16 @@ nav .profile-link a {
     text-align: center;
 }
 .blogs-button {
-    border: 3px solid #fff159;
-    border-radius: 10px;
-    padding: 10px 15px;
-
+     padding: 10px 15px;
+    font-weight: 900;
+    font-size: 16px;
+    box-shadow: 0.1em 0.1em;
+    border: 2px solid rgba(8, 8, 8, 0.781);
+    border-radius: 10px; 
+}
+.blogs-button:hover {
+    transform: translate(-0.05em, -0.05em);
+    box-shadow: 0.15em 0.15em;
 }
 .blogs-posts-container .post-container {
     display: inline-block;
@@ -179,7 +196,13 @@ nav .profile-link a {
     border: 3px solid #ffffff;
     border-radius: 10px;
     padding: 10px 15px;
+    box-shadow: 0.1em 0.1em;
 }
+.blogss-button:hover {
+    transform: translate(-0.05em, -0.05em);
+    box-shadow: 0.15em 0.15em;
+}
+
 footer {
     width: 100%;
     height: 80px;
@@ -225,6 +248,10 @@ footer p {
 .profile-main-container img {
  width: 300px;
  margin-right: 30px;
+border-radius: 50%;
+background: linear-gradient(145deg, #f0f0f0, #cacaca);
+box-shadow:  20px 20px 43px #929292,
+             -20px -20px 43px #ffffff;
 }
 .profile-main-container .profile-container {
     display: flex;
