--- a/css/main.css
+++ b/css/main.css
@@ -219,10 +219,10 @@ footer p {
 /*aca pone los estilos para tu presentación y abajo el footer de contacto*/
 .contact-main-container {
  width: 100%;
- min-height: 250px;
+ min-height: 200px;
  background-color: #e6e9ed;
  text-align: center;
- padding-bottom: 50px;
+ padding-bottom: 30px;
  }
 .contact-main-container div {
     display: inline-block;
@@ -265,8 +265,8 @@ box-shadow:  20px 20px 43px #929292,
  text-decoration: underline;
 }
 .profile-main-notes h3 {
-    border-bottom: 1px solid #666;
-    padding-bottom: 35px;
+    text-decoration: underline;
+    padding-bottom: 40px;
     text-align: center;
 }
 .notes-main-container {
@@ -275,4 +275,8 @@ box-shadow:  20px 20px 43px #929292,
 }
 .note-container {
     padding: 0 5px;
+}
+.tecno-info {
+    text-align: center;
+
 }
